[package]
name = "mri"
version = "0.1.7"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
procfs = { version = "0.16.0", features = ["serde1"] }
serde = "1.0.197"
serde_json = "1.0.115"
shlex = "1.3.0"
